--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 }
 
 .main {
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
@@ -106,6 +106,49 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.customBtn {
+  display: inline-block;
+  background: white;
+  color: #444;
+  width: 250px;
+  border-radius: 5px;
+  border: thin solid #888;
+  box-shadow: 1px 1px 1px grey;
+  white-space: nowrap;
+  padding: 0.5rem;
+}
+.customBtn:hover {
+  cursor: pointer;
+}
+.label {
+  font-family: serif;
+  font-weight: normal;
+}
+.icon {
+  background: url('/google-symbol.png') transparent 5px 50% no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: inline-block;
+  vertical-align: middle;
+  width: 42px;
+  height: 42px;
+}
+.buttonText {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 42px;
+  padding-right: 42px;
+  font-size: 14px;
+  font-weight: bold;
+  /* Use the Roboto font that is loaded in the <head> */
+  font-family: 'Roboto', sans-serif;
+}
+
+.image_login {
+  border-radius: 50%;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 600px) {
